--- a/static/img/bw-jtmack-sigh.html
+++ b/static/img/bw-jtmack-sigh.html
@@ -5,6 +5,23 @@
 <head>
 <meta http-equiv="Content-Type" content="application/xml+xhtml; charset=UTF-8"/>
 <title>static/img/bw-jtmack-sigh.ansi</title>
+<style>
+body {
+  margin: 0;
+  padding: 10px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+pre {
+  margin: 0;
+  font-family: monospace;
+  line-height: 1;
+  white-space: pre;
+  font-size: inherit;
+}
+</style>
 </head>
 <body>
 <pre>
